--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <span class="loading loading-spinner text-primary"></span>
         </div>
 
+        <div id="no-found-message" class="mt-24 text-5xl  text-center d-none hidden">
+            <h3 class="text-rose-600">No Phone Found. Please try a new search</h3>
+        </div>
+
 
 
 
